--- a/ms_2_intro_res_disc.Rmd
+++ b/ms_2_intro_res_disc.Rmd
@@ -131,4 +131,10 @@ Many studies using AquaMaps data test the sensitivity of results by varying the 
 <!-- summarize back to big picture: CBD, MPAs, climate velocity, etc... understanding species distributions, and therefore minimizing errors, is important to all these things -->
 _AquaMaps and IUCN are two of the most important databases providing species distribution information across a wide range of marine species, taxa, and regions.  The different methodologies behind the creation of each database is likely to introduce different rates of commission and omission errors, which can have a profound impact on our understanding of species ranges.  By comparing overlapping species maps from these two databases, we have identified likely sources of error, allowing data users to address or account for them.  For users of AquaMaps, IUCN, and other datasets of species distribution, reducing the likelihood of these errors is critical to effective biodiversity research and conservation action._
 
-Human impacts on oceans (pollution, ocean acidification, overfishing, extractive use) are increasingly pressuring the marine ecosystems that provide food, economic opportunity, cultural value, and life support.  Climate change and direct human impacts are driving shifts in species richness and abundance.  Managing and protecting the oceans to deliver these benefits sustainably requires much deeper understanding of the flora and fauna.  Managing and protecting marine species improves the resilience of critical ocean ecosystems to human-induced pressures. But effective management depends critically on accurate and robust understanding of the distribution of species we want to protect.
+Human impacts on oceans (pollution, ocean acidification, overfishing, extractive use, climate change) are increasingly pressuring the marine species and ecosystems we depend on for food, economic opportunity, cultural value, and life support.  Managing and protecting marine species improves the resilience of critical ocean ecosystems oceans to deliver these benefits sustainably, but effective management depends critically on accurate and robust understanding of the distribution of species we want to protect.  Highlighting the differences between the two currently most important datasets of marine species distributions can help us 
+
+- ocean ecosystems provide broad benefits to humans, but are under pressure from human activity and climate change; ensuring sustainability of benefits depends on effective management and protection of resources.
+- Effective management and protection of our ocean ecosystems depends on understanding how species are distributed globally.  
+- Two key datasets of marine species ranges communicate an understanding of the global distribution of marine species - and are commonly used to inform management and protection research and policy.
+- substantial differences highlight important gaps in understanding (or communicating) species ranges, leading to ineffective management and protection.
+- identifying these differences points to solutions to address them and improve understanding.
